tests/lean/def4.lean.expected.out
f : A → A
def4.lean:9:8: error: type mismatch at application
  f 0
term
  0
has type
  ℕ
but is expected to have type
  A
sorry : ?M_1
g : A → A
def4.lean:17:8: error: type mismatch at application
  g 0
term
  0
has type
  ℕ
but is expected to have type
  A
sorry : ?M_1
f : Π (A : Type u_1), A → A
f ℕ 0 : ℕ
g 0 : ℕ
